--- a/RentAMovie/Views/Home/Source.cshtml
+++ b/RentAMovie/Views/Home/Source.cshtml
@@ -7,13 +7,13 @@
 	<div class="source-item">
 		<img src="https://www.themoviedb.org/assets/2/v4/logos/v2/blue_square_2-d537fb228cf3ded904ef09b136fe3fec72548ebc1fea3fbbd1ad9e36364db38b.svg" />
 		<h3>
-			<a href="https://www.themoviedb.org">TMDB API</a>
+			<a href="https://www.themoviedb.org" target="_blank">TMDB API</a>
 		</h3>
 	</div>
 	<div class="source-item">
 		<img src="https://upload.wikimedia.org/wikipedia/en/thumb/8/80/Wikipedia-logo-v2.svg/1200px-Wikipedia-logo-v2.svg.png" />
 		<h3>
-			<a href="https://en.wikipedia.org/wiki/Main_Page">Wikipedia</a>
+			<a href="https://en.wikipedia.org/wiki/Main_Page" target="_blank">Wikipedia</a>
 		</h3>
 	</div>
 </div>
