--- a/RentAMovie/Views/Shared/_LoginPartial.cshtml
+++ b/RentAMovie/Views/Shared/_LoginPartial.cshtml
@@ -16,12 +16,12 @@
                 <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index">Profile</a>
             </li>
             <li class="nav-item">
-                <a class="dropdown-item" asp-area="" asp-controller="Movie" asp-action="Create">Add movie</a>
+                <a class="dropdown-item" asp-controller="Movie" asp-action="Create">Add movie</a>
             </li>
             @if (User.IsAdmin())
             {
                 <li>
-                    <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index">Admin panel</a>
+                    <a class="dropdown-item" asp-area="Admin" asp-controller="Home" asp-action="Index">Admin dashboard</a>
                 </li>
             }
         </ul>
