--- a/RentAMovie/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/RentAMovie/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -29,7 +29,7 @@
                             <a class="nav-link" asp-controller="Review" asp-action="Index">Reviews</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="Account" asp-action="Index">Accounts</a>
+                            <a class="nav-link" asp-controller="Account" asp-action="Index">Users</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index" style="color: #ffd8d8 !important;">Exit</a>
