--- a/RentAMovie/Areas/Admin/Views/Movie/Index.cshtml
+++ b/RentAMovie/Areas/Admin/Views/Movie/Index.cshtml
@@ -1,5 +1,95 @@
-﻿@{
+﻿@using RentAMovie.Areas.Admin.Models.Movie;
+@model MovieViewModel
+@{
 	ViewData["Title"] = "Movie Dashboard";
+	string posterPath = "https://image.tmdb.org/t/p/w500";
 }
 
-<h1>Movie dashboard</h1>
+<h3>User uploaded moives</h3>
+<div class="moives">
+	@if (Model.UsersMovies != null && Model.UsersMovies.Count() > 0)
+	{
+		@foreach (var movie in Model.UsersMovies)
+		{
+			<div class="moive">
+				@if (movie.Poster != null)
+				{
+					<img id="user-img" src="@movie.Poster" alt="@movie.Title poster">
+				}
+				else
+				{
+					<img id="user-img" src="~/images/default-poster1.png" />
+				}
+				<div class="movie-info">
+					<h4>@movie.Title</h4>
+					<p>@(movie.DatePublished != null ? movie.DatePublished.Value.ToString("MMM dd, yyyy") : "-")</p>
+					<div class="movie-controls">
+						<a asp-area="" asp-controller="Movie" asp-action="MovieUser" asp-route-movieId="@movie.Id">
+							<p>View</p>
+						</a>
+						<a asp-area="" asp-controller="Movie" asp-action="Edit" asp-route-id="@movie.Id">
+							<p>Edit</p>
+						</a>
+						<form asp-area="" asp-controller="Movie" asp-action="Delete" asp-route-id="@movie.Id">
+							<div>
+								<input type="submit" value="Delete"
+							   onclick="return confirm('Are you sure you want to DELETE this moive: @movie.Title')" />
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
+		}
+	}
+	else
+	{
+		<p id="no-moives">No available movies</p>
+	}
+
+</div>
+
+<h3>TMDB uploaded moives</h3>
+<div class="moives">
+	@if (Model.TmdbMovies != null && Model.TmdbMovies.Count() > 0)
+	{
+		@foreach (var movie in Model.TmdbMovies)
+		{
+			<div class="moive">
+				@if (movie.Poster != null)
+				{
+					<img src="@(posterPath + movie.Poster)" alt="@movie.Title poster">
+				}
+				else
+				{
+					<img src="~/images/default-poster1.png" />
+				}
+				<div class="movie-info">
+					<h4>@movie.Title</h4>
+					<p>@(movie.DatePublished != null ? movie.DatePublished.Value.ToString("MMM dd, yyyy") : "-")</p>
+					<div class="movie-controls">
+						<a asp-area="" asp-controller="Movie" asp-action="MovieTmdb" asp-route-id="@movie.TmdbId">
+							<p>View</p>
+						</a>
+						<a class="d-none">
+							<p>Edit</p>
+						</a>
+						<form asp-area="" asp-controller="Movie" asp-action="Delete" asp-route-id="@movie.Id">
+							<div>
+								<input type="submit" value="Delete"
+							   onclick="return confirm('Are you sure you want to DELETE this moive: @movie.Title')" />
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
+		}
+	}
+	else
+	{
+		<p id="no-moives">No available movies</p>
+	}
+</div>
+
+@section Styles {
+	<link rel="stylesheet" href="~/css/admin/movies.css" />
+}
