--- a/RentAMovie/Areas/Admin/Views/Account/Index.cshtml
+++ b/RentAMovie/Areas/Admin/Views/Account/Index.cshtml
@@ -23,12 +23,15 @@
                     <p>@user.Username</p>
                     <p>Registered on @user.DateCreated.Value.ToString("MMM dd, yyyy")</p>
                     <div class="user-controls">
-                        <form asp-area="Admin" asp-controller="Account" asp-action="Delete" asp-route-userId="@user.Id">
-                            <div>
-                                <input type="submit" value="Delete"
+                        @if (user.Username != "admin")
+                        {
+                            <form asp-area="Admin" asp-controller="Account" asp-action="Delete" asp-route-userId="@user.Id">
+                                <div>
+                                    <input type="submit" value="Delete"
                                onclick="return confirm('Are you sure you want to DELETE this user: @user.Username')" />
-                            </div>
-                        </form>
+                                </div>
+                            </form>
+                        }
                     </div>
                 </div>
             </div>
