--- a/RentAMovie/wwwroot/css/moviesSingle.css
+++ b/RentAMovie/wwwroot/css/moviesSingle.css
@@ -451,5 +451,18 @@ body .container {
 }
 
 @media screen and (max-width: 573px) {
-    
+    .main-container {
+        height: 800px;
+    }
+
+    .information-container {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 10px;
+    }
+
+    .info-main {
+        margin: 20px 0 0 0;
+    }
 }
