Added paging in popular movies

--- a/RentAMovie/Views/Shared/Movie/_MovieList.cshtml
+++ b/RentAMovie/Views/Shared/Movie/_MovieList.cshtml
@@ -5,7 +5,7 @@
 
 <div class="container">
 	<div class="row">
-		@foreach (var movie in Model)
+		@foreach (var movie in Model.Movies)
 		{
 			string rating = "0.0";
 			if (movie.Rating != null)
