--- a/RentAMovie/Views/Movie/Popular.cshtml
+++ b/RentAMovie/Views/Movie/Popular.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<PopularMovieResultModule>
+﻿@model PopularViewModel
 @{
 	ViewData["Title"] = "Popular";
 }
@@ -6,6 +6,39 @@
 <h3>What's Popular</h3>
 
 <partial name="~/Views/Shared/Movie/_MovieList.cshtml" />
+
+<div class="page-control">
+	@{
+		var previousPage = Model.CurrentPage - 1;
+		if (previousPage == 0)
+		{
+			previousPage = 1;
+		}
+		var nextPage = Model.CurrentPage + 1;
+	}
+	<nav>
+		<ul class="pagination">
+			<li class="page-item">
+				<a class="page-link" asp-controller="Movie" asp-action="Popular" asp-route-CurrentPage="@previousPage">
+					<span aria-hidden="true">&laquo;</span>
+					<span class="sr-only">Previous</span>
+				</a>
+			</li>
+
+			@for (int i = 1; i <= 10; i++)
+			{
+				<li class="page-item"><a class="page-link" asp-controller="Movie" asp-action="Popular" asp-route-CurrentPage="@i">@i</a></li>
+			}
+
+			<li class="page-item">
+				<a class="page-link" asp-controller="Movie" asp-action="Popular" asp-route-CurrentPage="@nextPage">
+					<span aria-hidden="true">&raquo;</span>
+					<span class="sr-only">Next</span>
+				</a>
+			</li>
+		</ul>
+	</nav>
+</div>
 
 @section Styles {
 	<link rel="stylesheet" href="~/css/movies.css" />
