--- a/RentAMovie/Views/Movie/Popular.cshtml
+++ b/RentAMovie/Views/Movie/Popular.cshtml
@@ -21,7 +21,6 @@
 			<li class="page-item">
 				<a class="page-link" asp-controller="Movie" asp-action="Popular" asp-route-CurrentPage="@previousPage">
 					<span aria-hidden="true">&laquo;</span>
-					<span class="sr-only">Previous</span>
 				</a>
 			</li>
 
@@ -33,7 +32,6 @@
 			<li class="page-item">
 				<a class="page-link" asp-controller="Movie" asp-action="Popular" asp-route-CurrentPage="@nextPage">
 					<span aria-hidden="true">&raquo;</span>
-					<span class="sr-only">Next</span>
 				</a>
 			</li>
 		</ul>
@@ -45,4 +43,5 @@
 }
 @section Scripts {
 	<script src="~/js/renderMovieInfo.js"></script>
+	<script src="~/js/movie/movieNavStyles.js"></script>
 }
