--- a/RentAMovie/Views/Movie/TopRated.cshtml
+++ b/RentAMovie/Views/Movie/TopRated.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<PopularMovieResultModule>
+﻿@model TopRatedViewModel
 @{
 	ViewData["Title"] = "Top Rated";
 }
@@ -7,9 +7,41 @@
 
 <partial name="~/Views/Shared/Movie/_MovieList.cshtml" />
 
+<div class="page-control">
+	@{
+		var previousPage = Model.CurrentPage - 1;
+		if (previousPage == 0)
+		{
+			previousPage = 1;
+		}
+		var nextPage = Model.CurrentPage + 1;
+	}
+	<nav>
+		<ul class="pagination">
+			<li class="page-item">
+				<a class="page-link" asp-controller="Movie" asp-action="TopRated" asp-route-CurrentPage="@previousPage">
+					<span aria-hidden="true">&laquo;</span>
+				</a>
+			</li>
+
+			@for (int i = 1; i <= 10; i++)
+			{
+				<li class="page-item"><a class="page-link" asp-controller="Movie" asp-action="TopRated" asp-route-CurrentPage="@i">@i</a></li>
+			}
+
+			<li class="page-item">
+				<a class="page-link" asp-controller="Movie" asp-action="TopRated" asp-route-CurrentPage="@nextPage">
+					<span aria-hidden="true">&raquo;</span>
+				</a>
+			</li>
+		</ul>
+	</nav>
+</div>
+
 @section Styles {
 	<link rel="stylesheet" href="~/css/movies.css" />
 }
 @section Scripts {
 	<script src="~/js/renderMovieInfo.js"></script>
+	<script src="~/js/movie/movieNavStyles.js"></script>
 }
