Changing popular movie redirects to have correct page

--- a/RentAMovie/Views/Home/Index.cshtml
+++ b/RentAMovie/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
 
 <div class="hero">
     <h3>Get into the world of <spam class="animation">movies</spam></h3>
-    <a asp-controller="Movie" asp-action="Popular">See what's popular</a>
+    <a asp-controller="Movie" asp-action="Popular" asp-route-CurrentPage="1">See what's popular</a>
 </div>
 <div class="tab-sections">
     <div class="tab">
