--- a/RentAMovie/Views/Movie/MovieUser.cshtml
+++ b/RentAMovie/Views/Movie/MovieUser.cshtml
@@ -34,6 +34,19 @@
             {
                 <img src="~/images/default-poster1.png" />
             }
+            
+            @if (Model.IsWatchlistedByUser == false)
+            {
+                <form asp-controller="Movie" asp-action="AddToWatchlist" asp-route-movieId="@Model.Id">
+                    <input type="submit" value="Add" />
+                </form>
+            }
+            else
+            {
+                <form asp-controller="Movie" asp-action="RemoveFromWatchlist" asp-route-movieId="@Model.Id">
+                    <input type="submit" value="Remove" />
+                </form>
+            }
         </div>
         <div class="info-main">
             <div class="header-info">
