--- a/RentAMovie/Views/Shared/_LoginPartial.cshtml
+++ b/RentAMovie/Views/Shared/_LoginPartial.cshtml
@@ -18,6 +18,9 @@
             <li class="nav-item">
                 <a class="dropdown-item" asp-area="" asp-controller="Movie" asp-action="Create">Add movie</a>
             </li>
+            <li class="nav-item">
+                <a class="dropdown-item" asp-area="" asp-controller="Movie" asp-action="UserWatchlist">Watchlist (10)</a>
+            </li>
             @if (User.IsAdmin())
             {
                 <li>
