--- a/RentAMovie/Views/Shared/_LoginPartial.cshtml
+++ b/RentAMovie/Views/Shared/_LoginPartial.cshtml
@@ -19,7 +19,7 @@
                 <a class="dropdown-item" asp-area="" asp-controller="Movie" asp-action="Create">Add movie</a>
             </li>
             <li class="nav-item">
-                <a class="dropdown-item" asp-area="" asp-controller="Movie" asp-action="UserWatchlist">Watchlist (10)</a>
+                <a class="dropdown-item" asp-area="" asp-controller="Movie" asp-action="UserWatchlist">Watchlist</a>
             </li>
             @if (User.IsAdmin())
             {
