--- a/RentAMovie/wwwroot/css/movies.css
+++ b/RentAMovie/wwwroot/css/movies.css
@@ -151,3 +151,16 @@ main .container {
     color: #f2f2f2 !important;
     background-color: #0a58ca;
 }
+
+#no-results {
+    margin: 30px 0 0 10px;
+    font-size: 1.3rem;
+    opacity: 90%;
+
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
