--- a/RentAMovie/Views/Movie/MovieUser.cshtml
+++ b/RentAMovie/Views/Movie/MovieUser.cshtml
@@ -1,4 +1,5 @@
-﻿@model UserSingleMovieModel
+﻿@inject SignInManager<User> SignInManager
+@model UserSingleMovieModel
 @{
     ViewData["Title"] = Model.Title + (Model.DatePublished != null ? $" ({Model.DatePublished.Value.Year})" : "");
 
@@ -37,10 +38,20 @@
             
             @if (Model.IsWatchlistedByUser == false)
             {
-                <form class="bookmark-form" asp-controller="Movie" asp-action="AddToWatchlist" asp-route-movieId="@Model.Id">
-                    <input type="submit" />
-                    <img class="bookmark" src="~/images/bookmark/bookmark.png" />
-                </form>
+                @if (SignInManager.IsSignedIn(User))
+                {
+                    <form class="bookmark-form" asp-controller="Movie" asp-action="AddToWatchlist" asp-route-movieId="@Model.Id">
+                        <input type="submit" />
+                        <img class="bookmark" src="~/images/bookmark/bookmark.png" />
+                    </form>
+                }
+                else
+                {
+                    <form class="bookmark-form" asp-area="Identity" asp-page="/Account/Login">
+                        <input type="submit" />
+                        <img class="bookmark" src="~/images/bookmark/bookmark.png" />
+                    </form>
+                }
             }
             else
             {
